fix: horizontal scroll bar

--- a/src/app/landingpage/landingpage.component.scss
+++ b/src/app/landingpage/landingpage.component.scss
@@ -28,7 +28,7 @@ section{
     max-width: $content-limit;
     width: 100%;
     flex: 1;
-    padding: 16px;
+    padding: 10px;
     padding-bottom: 0px;
 }
 
